Replace prepublish script with prepare

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Command line interface for Ajv JSON schema validator",
   "scripts": {
     "build": "rimraf dist && tsc",
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "eslint": "eslint \"src/**/*.*s\" \"test/**/*.js\"",
     "prettier:write": "prettier --write \"./**/*.{json,yaml,js,ts}\"",
     "prettier:check": "prettier --list-different \"./**/*.{json,yaml,js,ts}\"",
